# power_bi_helper

./: .gitignore  README.md  main.py  power_bi_doctor.py  power_bi_measure_doctor.py  pyproject.toml  test.py
src/agents/: agent.py  agent_google.py  powerBI_documenter_agent.py
src/agents/host_agent/: agent.py
src/infrastructure/llm_clients/: base.py  open_ai_client.py
src/prompts/: power_bi_documentation.py
src/utils/: agent_utils.py  utils.py
tests/: conftest.py  llm_ai_client_test.py  test_agent_google_ai.py  test_utils_functions.py
tests/fixtures/: Measure table goal.tmdl  object_finder_fixture.tmdl
tests/fixtures/column descriptions/: Goal.tmdl  Init.tmdl
tests/fixtures/measure descriptions/: Init.tmdl
tests/fixtures/model fixtures/: KPI.tmdl
tests/fixtures/table descriptions/: table1_goal.tmdl  table_1.tmdl  table_2 goal.tmdl  table_2.tmdl
